--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -37,9 +37,19 @@ html{
         flex-direction: column;
         justify-content: center;
 
+        @include media-queries.desktop {
+            align-items: center;
+            justify-content: flex-start;
+            height: 100vh;
+        }
+
         main{
             display: flex;
             flex-direction: column;
+
+            @include media-queries.desktop {
+                margin-top: 4rem;
+            }
 
             .logo-alura{
                 width: 2.5rem;
