--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,12 +18,12 @@ html body {
   background-image: url("../assets/background.jpg");
   background-color: #FED403;
   height: 170vh;
+  margin-top: 4rem;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 @media screen and (min-width: 1024px) {
   html body {
@@ -44,8 +44,14 @@ html body main {
 html body main .logo-alura {
   width: 2.5rem;
   position: absolute;
-  top: 2rem;
-  left: 2rem;
+  top: 1rem;
+  left: 1rem;
+}
+@media screen and (min-width: 768px) {
+  html body main .logo-alura {
+    top: 2rem;
+    left: 2rem;
+  }
 }
 html body main .title {
   font-family: "Spicy Rice", cursiva;
