--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -23,7 +23,7 @@ html{
         display: flex;
         background-image: url("../assets/background.jpg");
         background-color: $gold;
-        height: 170vh;
+        height: 70rem;
         margin-top: 4rem;
         background-position: center;
         background-repeat: no-repeat;
