--- a/styles/_output-message.scss
+++ b/styles/_output-message.scss
@@ -15,7 +15,7 @@
     textarea{
         height: 19rem;
         margin: 1.5rem 1.5rem 0.5rem;
-        background-image: url(/assets/Muñeco.png);
+        background-image: url(./assets/Muñeco.png);
         background-position: center;
         background-repeat: no-repeat;
         background-color: globals.$non-photo-blue;
