--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,7 +107,7 @@ html body main .title {
 .output-message textarea {
   height: 19rem;
   margin: 1.5rem 1.5rem 0.5rem;
-  background-image: url(/assets/Muñeco.png);
+  background-image: url(./assets/Muñeco.png);
   background-position: center;
   background-repeat: no-repeat;
   background-color: #98DBEE;
@@ -122,7 +122,7 @@ html body main .title {
   border-radius: 0.8rem;
   border: none;
   font-size: 1.2rem;
-  font-weight: 500;
+  font-weight: 700;
   color: #000000;
   font-family: "Darker Grotesque", sans-serif;
   margin: 0.4rem 1.5rem;
@@ -140,7 +140,7 @@ html body main .title {
   border-radius: 0.8rem;
   border: none;
   font-size: 1.2rem;
-  font-weight: 500;
+  font-weight: 700;
   color: #000000;
   font-family: "Darker Grotesque", sans-serif;
   width: 47%;
