--- a/styles/_output-message.scss
+++ b/styles/_output-message.scss
@@ -3,7 +3,7 @@
 @use "globals";
 
 .output-message{
-    width: 19rem;
+    width: 22rem;
     height: 27rem;
     background-color: globals.$white;
     border-radius: 0.8rem;
@@ -12,7 +12,8 @@
     flex-direction: column;
 
     .msg-out{
-        height: 19rem;
+        height: 18rem;
+        padding: 1rem;
         margin: 1.5rem 1.5rem 0.5rem;
         background-image: url(../assets/Muñeco.png);
         background-position: center;
