--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,7 @@ html body main .title {
 
 .input-message {
   font-family: "Darker Grotesque", sans-serif;
-  width: 19rem;
+  width: 22rem;
   height: 27rem;
   background-color: #ffffff;
   border-radius: 0.8rem;
@@ -77,7 +77,8 @@ html body main .title {
   flex-direction: column;
 }
 .input-message .msg-in {
-  height: 14rem;
+  height: 12rem;
+  padding: 1rem;
   margin: 1.5rem 1.5rem 0.5rem;
   background-color: #98DBEE;
   border: none;
@@ -109,7 +110,7 @@ html body main .title {
 }
 
 .output-message {
-  width: 19rem;
+  width: 22rem;
   height: 27rem;
   background-color: #ffffff;
   border-radius: 0.8rem;
@@ -118,7 +119,8 @@ html body main .title {
   flex-direction: column;
 }
 .output-message .msg-out {
-  height: 19rem;
+  height: 18rem;
+  padding: 1rem;
   margin: 1.5rem 1.5rem 0.5rem;
   background-image: url(../assets/Muñeco.png);
   background-position: center;
