--- a/styles/_btn.scss
+++ b/styles/_btn.scss
@@ -11,6 +11,16 @@
     font-weight: 700;
     color: globals.$black;
     font-family: globals.$darker;
+    box-shadow: 0px 0px 8px 2px rgba(173,151,36,1) inset;
+
+    &:hover{
+        background-color: rgb(221, 188, 25);
+    }
+
+    &:active{
+        background-color: rgb(182, 156, 31);
+        box-shadow: 0px 0px 8px 2px rgb(108, 95, 26) inset;
+    }
 }
 
 .btn{
