--- a/styles/_input-message.scss
+++ b/styles/_input-message.scss
@@ -11,6 +11,7 @@
     margin: 2rem;
     display: flex;
     flex-direction: column;
+    box-shadow: 0px 0px 10px 5px rgba(191,191,191,0.64) inset, 0px 0px 21px 3px rgba(74,74,74,0.68);
 
     .msg-in{
         height: 12rem;
@@ -24,6 +25,7 @@
         font-family: globals.$darker;
         font-size: 1.3rem;
         font-weight: 300;
+        box-shadow: 0px 0px 18px -2px rgba(74,74,74,0.5) inset, 0px 0px 10px 5px rgba(191,191,191,0.64);
     }
 
     .msg-in::placeholder{
