--- a/styles/_output-message.scss
+++ b/styles/_output-message.scss
@@ -14,6 +14,7 @@
     font-family: globals.$darker;
     font-size: 1.3rem;
     font-weight: 300;
+    box-shadow: 0px 0px 10px 5px rgba(191,191,191,0.64) inset, 0px 0px 21px 3px rgba(74,74,74,0.68);
 
     .msg-out{
         height: 18rem;
@@ -26,6 +27,7 @@
         border: none;
         border-radius: 0.8rem;
         resize: none;
+        box-shadow: 0px 0px 18px -2px rgba(74,74,74,0.5) inset, 0px 0px 10px 5px rgba(191,191,191,0.64);
     }
 
     .msg-out::placeholder{
