--- a/styles/_output-message.scss
+++ b/styles/_output-message.scss
@@ -27,6 +27,9 @@
         border: none;
         border-radius: 0.8rem;
         resize: none;
+        font-family: globals.$darker;
+        font-size: 1.2rem;
+        font-weight: 500;
         box-shadow: 0px 0px 18px -2px rgba(74,74,74,0.5) inset, 0px 0px 10px 5px rgba(191,191,191,0.64);
     }
 
