--- a/styles/_output-message.scss
+++ b/styles/_output-message.scss
@@ -20,27 +20,31 @@
         height: 18rem;
         padding: 1rem;
         margin: 1.5rem 1.5rem 0.5rem;
-        background-image: url(../assets/Muñeco.png);
-        background-position: center;
-        background-repeat: no-repeat;
         background-color: globals.$non-photo-blue;
         border: none;
         border-radius: 0.8rem;
         resize: none;
         font-family: globals.$darker;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         font-weight: 500;
         box-shadow: 0px 0px 18px -2px rgba(74,74,74,0.5) inset, 0px 0px 10px 5px rgba(191,191,191,0.64);
     }
 
     .msg-out::placeholder{
         font-family: globals.$darker;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         font-weight: 300;
     }
 
     .msg-out:focus-visible{
         outline: none;
+    }
+    .img-munieco{
+        width: 17rem;
+        margin-top: 3.5rem;
+        margin-left: 2rem;
+        display: flex;
+        position: absolute;
     }
 
 }
