--- a/styles/_btn.scss
+++ b/styles/_btn.scss
@@ -12,6 +12,7 @@
     color: globals.$black;
     font-family: globals.$darker;
     box-shadow: 0px 0px 8px 2px rgba(173,151,36,1) inset;
+    cursor: pointer;
 
     &:hover{
         background-color: rgb(221, 188, 25);
