--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -14,4 +14,15 @@ footer{
             margin: 1rem;
         }
     }
+
+    .txt{
+        font-family: globals.$darker;
+        font-size: 1.2rem;
+        font-weight: 500;
+
+        .txt-mention{
+            font-family: globals.$elsie;
+            font-size: 1.3rem;
+        }
+    }
 }
