--- a/styles/_input-message.scss
+++ b/styles/_input-message.scss
@@ -13,6 +13,11 @@
     flex-direction: column;
     box-shadow: 0px 0px 10px 5px rgba(191,191,191,0.64) inset, 0px 0px 21px 3px rgba(74,74,74,0.68);
 
+    @include media-queries.desktop {
+        width: 25rem;
+        height: 24rem;
+    }
+
     .msg-in{
         height: 12rem;
         padding: 1rem;
@@ -26,6 +31,10 @@
         font-size: 1.5rem;
         font-weight: 500;
         box-shadow: 0px 0px 18px -2px rgba(74,74,74,0.5) inset, 0px 0px 10px 5px rgba(191,191,191,0.64);
+
+        @include media-queries.desktop {
+            height: 9rem;
+        }
     }
 
     .msg-in::placeholder{
