--- a/styles/_output-message.scss
+++ b/styles/_output-message.scss
@@ -16,6 +16,11 @@
     font-weight: 300;
     box-shadow: 0px 0px 10px 5px rgba(191,191,191,0.64) inset, 0px 0px 21px 3px rgba(74,74,74,0.68);
 
+    @include media-queries.desktop {
+        width: 25rem;
+        height: 24rem;
+    }
+
     .msg-out{
         height: 18rem;
         padding: 1rem;
@@ -28,6 +33,10 @@
         font-size: 1.5rem;
         font-weight: 500;
         box-shadow: 0px 0px 18px -2px rgba(74,74,74,0.5) inset, 0px 0px 10px 5px rgba(191,191,191,0.64);
+
+        @include media-queries.desktop {
+            height: 15.4rem;
+        }
     }
 
     .msg-out::placeholder{
@@ -45,6 +54,10 @@
         margin-left: 2rem;
         display: flex;
         position: absolute;
+
+        @include media-queries.desktop {
+            margin-left: 4rem;
+        }
     }
 
 }
