--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -3,6 +3,15 @@
 @use "globals";
 
 footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include media-queries.desktop {
+        position: relative;
+        bottom: -1rem;
+    }
+
 
     .icons-footer{
         display: flex;
