--- a/styles/styles.css
+++ b/styles/styles.css
@@ -245,6 +245,17 @@ html body main .title {
   box-shadow: 0px 0px 8px 2px rgb(108, 95, 26) inset;
 }
 
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1024px) {
+  footer {
+    position: relative;
+    bottom: -1rem;
+  }
+}
 footer .icons-footer {
   display: flex;
   flex-direction: row;
