--- a/styles/_container.scss
+++ b/styles/_container.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 2rem;
 
     @include media-queries.desktop {
         flex-direction: row;
