--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,10 @@
 html {
-  font-size: 17px;
+  font-size: 15px;
+}
+@media screen and (min-width: 1024px) {
+  html {
+    font-size: 16px;
+  }
 }
 html body {
   width: 100vw;
@@ -48,15 +53,16 @@ html body main .title {
   font-size: 2rem;
   color: #000000;
   text-align: center;
+  margin-top: 1.5rem;
 }
 @media screen and (min-width: 768px) {
   html body main .title {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
 }
 @media screen and (min-width: 1024px) {
   html body main .title {
-    font-size: 2.8rem;
+    font-size: 2.4rem;
   }
 }
 
@@ -64,6 +70,7 @@ html body main .title {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 2rem;
 }
 @media screen and (min-width: 1024px) {
   .container {
