--- a/styles/_btn.scss
+++ b/styles/_btn.scss
@@ -3,12 +3,13 @@
 @use "globals";
 
 @mixin button{
-    height: 3rem;
+    height: 2.4rem;
     background-color: globals.$gold;
     border-radius: 0.8rem;
     border: none;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 700;
+    letter-spacing: 0.1rem;
     color: globals.$black;
     font-family: globals.$darker;
     box-shadow: 0px 0px 8px 2px rgba(173,151,36,1) inset;
