--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -11,14 +11,10 @@ $non-photo-blue: #98DBEE;
 
 
 html{
-    font-size: 15px;
-
-    @include media-queries.desktop{
-        font-size: 16px;
-    }
+    font-size: 16px;
 
     body{
-        width: 100vw;
+        width: 100%;
         display: flex;
         background-image: url("../assets/background.jpg");
         background-color: $gold;
@@ -42,7 +38,7 @@ html{
             flex-direction: column;
 
             @include media-queries.desktop {
-                margin-top: 2rem;
+                margin-top: 1rem;
             }
 
             .logo-alura{
@@ -59,18 +55,15 @@ html{
 
             .title{
                 font-family: $spicy;
-                font-size: 2rem;
+                font-size: 1.5rem;
                 color: $black;
                 text-align: center;
-                margin-top: 1.5rem;
+                margin-top: 2rem;
 
                 @include media-queries.desktop-s {
                     font-size: 2.3rem;
                 }
 
-                @include media-queries.desktop {
-                    font-size: 2.4rem;
-                }
             }
         }
     }
