--- a/styles/_input-message.scss
+++ b/styles/_input-message.scss
@@ -14,8 +14,8 @@
     box-shadow: 0px 0px 10px 5px rgba(191,191,191,0.64) inset, 0px 0px 21px 3px rgba(74,74,74,0.68);
 
     @include media-queries.desktop {
-        width: 25rem;
-        height: 24rem;
+        width: 20rem;
+        height: 18rem;
     }
 
     .msg-in{
@@ -33,7 +33,7 @@
         box-shadow: 0px 0px 18px -2px rgba(74,74,74,0.5) inset, 0px 0px 10px 5px rgba(191,191,191,0.64);
 
         @include media-queries.desktop {
-            height: 9rem;
+            height: 32%;
         }
     }
 
@@ -52,7 +52,7 @@
         font-family: globals.$darker;
         font-size: 1.2rem;
         font-weight: 500;
-        margin: 0.6rem 1.5rem;
+        margin: 0rem 1.5rem;
 
         .exclamation-icon{
             width: 1rem;
