--- a/styles/_output-message.scss
+++ b/styles/_output-message.scss
@@ -17,8 +17,8 @@
     box-shadow: 0px 0px 10px 5px rgba(191,191,191,0.64) inset, 0px 0px 21px 3px rgba(74,74,74,0.68);
 
     @include media-queries.desktop {
-        width: 25rem;
-        height: 24rem;
+        width: 20rem;
+        height: 18rem;
     }
 
     .msg-out{
@@ -35,7 +35,7 @@
         box-shadow: 0px 0px 18px -2px rgba(74,74,74,0.5) inset, 0px 0px 10px 5px rgba(191,191,191,0.64);
 
         @include media-queries.desktop {
-            height: 15.4rem;
+            height: 56%;
         }
     }
 
@@ -49,8 +49,8 @@
         outline: none;
     }
     .img-munieco{
-        width: 17rem;
-        margin-top: 3.5rem;
+        width: 12rem;
+        margin-top: 2rem;
         margin-left: 2rem;
         display: flex;
         position: absolute;
