arreglo de footer, cambio de email

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -6,10 +6,12 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
+    bottom: 1rem;
+    position: relative;
 
     @include media-queries.desktop {
-        position: relative;
-        bottom: -1rem;
+        position: fixed;
+        bottom: 2rem;
     }
 
 
